# poster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  posts.example.yaml  posts.schema.json  posts.yaml
.asimov/: project.yaml  roadmap.yaml
.cargo-husky/hooks/: pre-commit
.claude/hooks/: pre-compact.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  linkedin.rs  main.rs  posts.rs  update.rs  x.rs
