[package]
name = "royalbit-poster"
version = "0.7.1"
edition = "2021"
authors = ["RoyalBit Inc. <admin@royalbit.ca>"]
description = "Social media automation CLI for LinkedIn and X"
license = "Elastic-2.0"
repository = "https://github.com/royalbit/poster"
readme = "README.md"
keywords = ["cli", "social-media", "linkedin", "twitter", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "poster"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
open = "5"
url = "2"
urlencoding = "2"

# OAuth
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

[profile.release]
lto = true
strip = true

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
jsonschema = "0.29"
tempfile = "3"
wiremock = "0.6"
